buildfire.pluginInstance.get an message is passed

--- a/widget/service.html
+++ b/widget/service.html
@@ -55,7 +55,7 @@
                 }
               }
 
-              buildfire.pluginInstance.get([buildfire.context.instanceId],function(err,data){
+              buildfire.pluginInstance.get( buildfire.context.instanceId ,function(err,data){
                 console.log(err);
                 console.log(data);
               });
