--- a/widget/service.html
+++ b/widget/service.html
@@ -2,145 +2,74 @@
 <html>
 <head>
 
-  <meta name="buildfire" content="disableTheme,disableFastClick">
+    <meta name="buildfire" content="disableTheme,disableFastClick">
 
-  <!-- JS -->
+    <!-- JS -->
 
-  <script src="../../../scripts/buildfire.js"></script>
-  <script src="https://cdn.smooch.io/smooch.min.js"></script>
-  <!--
-  <script src="../../../scripts/angular/angular.min.js"></script>
-  <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
-  -->
+    <script src="../../../scripts/buildfire.js"></script>
+    <script src="https://cdn.smooch.io/smooch.min.js"></script>
+    <!--
+    <script src="../../../scripts/angular/angular.min.js"></script>
+    <script src="../../../scripts/jquery/jquery-1.11.2.min.js"></script>
+    -->
 
-  <script type="text/javascript">
-  /*(function () {
-      console.log("Service is loaded in backhground");
-      var smoochApp = {};
+    <script type="text/javascript">
 
-      buildfire.datastore.get('smoochChatInfo', function (err, res) {
-        getDataAndAttachSmoochEvent(res);
-      });
+        var options,counter;
+        function init(obj) {
+            console.log("$$$$$$$$$$$$$$$$$$$$$$ INIT CALLED");
+                if (obj) {
+                    var initObj = {};
+                    if (obj.data && obj.data.settings && obj.data.settings.type && obj.data.settings.type == "Private") {
+                        initObj.appToken = obj.data.settings.apiKey;
+                        initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
 
+                        buildfire.auth.getCurrentUser(function (err, user) {
+                            if (user) {
+                                initObj.givenName = user.displayName;
+                                initObj.email = user.email;
+                                initObj.userId = user._id;
+                            } else {
+                                try {
+                                    var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
+                                } catch (e) {
+                                    console.log("Error while parsing value: ", e);
+                                }
+                                console.log("****************", randomId);
+                                if (randomId && randomId.id) {
+                                    initObj.userId = randomId.id;
+                                }
+                            }
 
-      buildfire.messaging.onReceivedMessage = function (event) {
-        switch (event && event.name) {
+                            Smooch.on('message:received', function (message) {
+                                console.log('the user received a message', message);
+                                console.log("InstanceId :::::::::",buildfire.context.instanceId);
 
-          case "SETTINGS_UPDATED" :
-            getDataAndAttachSmoochEvent(event)
-        }
-      };
+                                buildfire.pluginInstance.get( buildfire.context.instanceId ,function(err,instance){
+                                    console.log(err);
+                                    console.log(instance);
+                                    buildfire.navigation.navigateTo({
+                                        pluginId: instance.pluginType.token,
+                                        instanceId: instance.instanceId,
+                                        title: instance.title,
+                                        folderName : instance.pluginType.folderName
+                                    });
+                                });
 
-      function getDataAndAttachSmoochEvent(obj){
-        if (obj) {
-          var initObj = {};
-          if (obj.data.settings.type == "Private") {
-            initObj.appToken = obj.data.settings.apiKey;
-            initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
+                            });
 
-            buildfire.auth.getCurrentUser(function (err, user) {
-              if (user) {
-                initObj.givenName = user.displayName;
-                initObj.email = user.email;
-                initObj.userId = user._id;
-              } else {
-                try {
-                  var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
-                } catch (e) {
-                  console.log("Error while parsing value: ", e);
+                            var smoochApp = Smooch.init(initObj);
+                        });
+                    }
                 }
-                console.log("****************", randomId);
-                if (randomId && randomId.id) {
-                  initObj.userId = randomId.id;
-                }
-              }
 
-              Smooch.on('message:received', function (message) {
-                console.log('the user received a message', message);
-                console.log("InstanceId :::::::::",buildfire.context.instanceId);
-
-                buildfire.pluginInstance.get( buildfire.context.instanceId ,function(err,instance){
-                  console.log(err);
-                  console.log(instance);
-                  buildfire.navigation.navigateTo({
-                    pluginId: instance.pluginType.token,
-                    instanceId: instance.instanceId,
-                    title: instance.title,
-                    folderName : instance.pluginType.folderName
-                  });
-                });
-
-              });
-
-              smoochApp = Smooch.init(initObj);
-            });
-          }
         }
-      }
-    })();*/
-
-   var options,counter;
-   function init(obj) {
-    console.log("$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$ INIT CALLED");
-     var tmr = setInterval(function () {
-
-       if (obj) {
-         var initObj = {};
-         if (obj.data.settings.type == "Private") {
-           initObj.appToken = obj.data.settings.apiKey;
-           initObj.customText = {headerText: obj.data.settings.headerText || "How can we help?"};
-
-           buildfire.auth.getCurrentUser(function (err, user) {
-             if (user) {
-               initObj.givenName = user.displayName;
-               initObj.email = user.email;
-               initObj.userId = user._id;
-             } else {
-               try {
-                 var randomId = JSON.parse(localStorage.getItem('smoochUserRandomId'));
-               } catch (e) {
-                 console.log("Error while parsing value: ", e);
-               }
-               console.log("****************", randomId);
-               if (randomId && randomId.id) {
-                 initObj.userId = randomId.id;
-               }
-             }
-
-             Smooch.on('message:received', function (message) {
-               console.log('the user received a message', message);
-               console.log("InstanceId :::::::::",buildfire.context.instanceId);
-
-               buildfire.pluginInstance.get( buildfire.context.instanceId ,function(err,instance){
-                 console.log(err);
-                 console.log(instance);
-                 buildfire.navigation.navigateTo({
-                   pluginId: instance.pluginType.token,
-                   instanceId: instance.instanceId,
-                   title: instance.title,
-                   folderName : instance.pluginType.folderName
-                 });
-               });
-
-             });
-
-            var smoochApp = Smooch.init(initObj);
-           });
-         }
-       }
-         clearInterval(tmr);
-
-     }, 1000);
-   }
-   buildfire.datastore.get("smoochChatInfo",function(err,obj){
-     if(obj){
-       options = obj.data;
-       init(obj);
-     }
-   });
+        buildfire.datastore.get("smoochChatInfo",function(err,obj){
+                init(obj);
+        });
 
 
-  </script>
+    </script>
 
 </head>
 
