semicolon error removed

--- a/widget/service.html
+++ b/widget/service.html
@@ -52,7 +52,7 @@
                                         pluginId: instance.token,
                                         instanceId: instance.instanceId,
                                         title: instance.title,
-                                        folderName : instance._buildfire.pluginType.folderName.result[0].folderName;
+                                        folderName : instance._buildfire.pluginType.folderName.result[0].folderName
                                     });
                                 });
 
